tests/errors/syn_method11.java
public class syn_method11 {
public static String[] main ( ) {

}